# epochal

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
.claude/: settings.local.json
.github/: README.md  dependabot.yml  labeler.yml
.github/workflows/: bdd-tests.yml  ci.yml  cross-platform.yml  pr-labeler.yml
crates/bdd-tests/: Cargo.toml
crates/bdd-tests/tests/: integration.rs
crates/bdd-tests/tests/behaviours/: mod.rs
crates/bdd-tests/tests/behaviours/common/: mod.rs  world.rs
crates/bdd-tests/tests/behaviours/steps/: app_steps.rs  mod.rs  tray_steps.rs  ui_steps.rs  workflow_steps.rs
crates/epochal-app/: Cargo.toml  build.rs
crates/epochal-app/src/: main.rs  tray.rs
crates/epochal-app/ui/: window.blp
data/: com.korora.Epochal.desktop  resources.gresource.xml
features/: app_lifecycle.feature  system_tray.feature  ui_interactions.feature  user_workflows.feature
