[package]
name = "bdd-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
cucumber = { version = "0.21", features = ["libtest"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
gtk4 = { workspace = true, features = ["v4_10"] }
libadwaita = { workspace = true, features = ["v1_5"] }
glib = { workspace = true }
gio = { workspace = true }
gdk4 = { workspace = true }

[dev-dependencies]
proptest = "1.9"
insta = "1.34"

[[test]]
name = "integration"
harness = false