[package]
name = "epochal-app"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { workspace = true, features = ["v4_10"] }
libadwaita = { workspace = true, features = ["v1_5"] }
glib = { workspace = true }
gio = { workspace = true }
gdk4 = { workspace = true }
chrono = "0.4"
image = "0.25"

[build-dependencies]
glib-build-tools = "0.20"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
tray-icon = "0.18"

[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.2"
